force-app/main/default/objects/Subscription__c/fields/Account_exists__c.field-meta.xml
<CustomField>
    <fullName>Account_exists__c</fullName>
    <formula>IF( ISBLANK(Contact__r.Account.Name),FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account?</label>
    <type>Checkbox</type>
</CustomField>