force-app/main/default/objects/Subscription__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__r.Account.Name)),Contact__r.Account.Name,  Contact__r.Organization_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>