force-app/main/default/objects/Subscription__c/fields/Account_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Account_Recordtype__c</fullName>
    <formula>Contact__r.Account.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Recordtype</label>
    <type>Text</type>
</CustomField>