force-app/main/default/objects/Subscription__c/fields/Acknowledge_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_Date__c</fullName>
    <label>Acknowledge Date</label>
    <type>DateTime</type>
</CustomField>