force-app/main/default/objects/Subscription__c/fields/Confirmation_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Date__c</fullName>
    <label>Confirmation Email Date</label>
    <type>DateTime</type>
</CustomField>