force-app/main/default/objects/Subscription__c/fields/Email_Reminder_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Reminder_2__c</fullName>
    <label>Email Reminder 2</label>
    <type>DateTime</type>
</CustomField>