force-app/main/default/objects/Subscription__c/fields/Email_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Email_Reminder__c</fullName>
    <label>Email Reminder 1</label>
    <type>DateTime</type>
</CustomField>