force-app/main/default/objects/Subscription__c/fields/Event_Form__c.field-meta.xml
<CustomField>
    <fullName>Event_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event_Form__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>