force-app/main/default/objects/Subscription__c/fields/Follow_up_Email__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should we send the follow-up email?</inlineHelpText>
    <label>Follow-up Email</label>
    <type>Checkbox</type>
</CustomField>