force-app/main/default/objects/Subscription__c/fields/Follow_up_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Email_Date__c</fullName>
    <inlineHelpText>Follow-up Email time-stamp.</inlineHelpText>
    <label>Follow-up Email Date</label>
    <type>DateTime</type>
</CustomField>