force-app/main/default/objects/Subscription__c/fields/Link_para_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Link_para_QR_Code__c</fullName>
    <formula>&apos;https://raisengo.my.salesforce.com/apex/ConfirmacaoEvento?subscription=&apos;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link para QR Code</label>
    <type>Text</type>
</CustomField>