force-app/main/default/objects/Subscription__c/fields/Presen_a_no_Evento__c.field-meta.xml
<CustomField>
    <fullName>Presen_a_no_Evento__c</fullName>
    <label>Presença no Evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presente</fullName>
            </value>
            <value>
                <fullName>Não presente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>