force-app/main/default/objects/Subscription__c/fields/Send_Email_Reminder_2__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Reminder_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Reminder 2</label>
    <type>Checkbox</type>
</CustomField>