force-app/main/default/objects/Subscription__c/fields/Sent_Email_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Sent_Email_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Reminder 1</label>
    <type>Checkbox</type>
</CustomField>