force-app/main/default/objects/Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Presen_a_no_Evento__c</columns>
    <columns>Follow_up_Email__c</columns>
    <columns>Follow_up_Email_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Presen_a_no_Evento__c</field>
        <operation>equals</operation>
        <value>Presente</value>
    </filters>
    <label>All</label>
</ListView>