force-app/main/default/objects/Subscription__c/listViews/RGPD_Follow_up.listView-meta.xml
<ListView>
    <fullName>RGPD_Follow_up</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Recordtype__c</columns>
    <columns>Follow_up_Email__c</columns>
    <columns>Follow_up_Email_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Form__c</field>
        <operation>equals</operation>
        <value>Guia RGPD</value>
    </filters>
    <filters>
        <field>Account_Recordtype__c</field>
        <operation>equals</operation>
        <value>Prospecto_ONG</value>
    </filters>
    <filters>
        <field>Follow_up_Email__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>RGPD - Follow-up</label>
</ListView>